# philsdictationapp

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
public/: audio-processor.js
server/: google.cjs
src/: App.tsx  main.tsx  revai.tsx  styles.css  types.d.ts
src-tauri/: 18087PhilPDX.PhilsDictationApp_1.0.0.0_x64__43p9kke0jf6yw_template.xml  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/ai/: markdown.ts  markdown_prompt.ts
src/components/: Buttons.tsx  Indicators.tsx  MicErrors.tsx
src/components/errors/: chrome_warning.tsx  tater_fatal.tsx
src/google/: client.ts
src/helpers/: TextareaUtils.ts  clipboard.ts  commands.ts  jwt.ts  punctuation.ts  textarea-caret-position.js
src/hooks/: usePhilSpeech.ts
src/xstate/: tater.ts  tater_context.ts  tater_machine.ts
src/xstate/actions/: config.ts  cut_text.ts  save_and_load.ts  textarea.ts  turn_mic_on.ts  write_textarea.ts
src/xstate/assigns/: init.ts  textarea.ts
src/xstate/effects/: initialize_tater.ts  subscribe_to_tater.ts
src/xstate/helpers/: mobile.ts  read_textarea.ts  textarea.ts  textarea_onchange.ts
src/xstate/logic/: assemblyai_callback.ts  azure_callback.ts  init_assemblyai_promise.ts  init_speech_api_async.ts  init_speech_api_promise.ts  punctuation_machine.ts  speech_api_callback.ts  speechmatics_callback.ts  speechmatics_machine.ts  speechmatics_node_demo.ts  textarea_callback.ts  window_callback.ts
(+2 files in other folders)
